@@ -48,7 +48,7 @@
         </item>
         <item>
             <key> <string>optional</string> </key>
-            <value> <int>1</int> </value>
+            <value> <int>0</int> </value>
         </item>
         <item>
             <key> <string>permissions</string> </key>
