@@ -48,7 +48,7 @@
         </item>
         <item>
             <key> <string>optional</string> </key>
-            <value> <int>1</int> </value>
+            <value> <int>0</int> </value>
         </item>
         <item>
             <key> <string>permissions</string> </key>
@@ -87,7 +87,11 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${portal_url}/sale_order_module/view</string> </value>
+            <value> <string encoding="cdata"><![CDATA[
+
+string:${portal_url}/sale_order_module/view?reset:int=1&default_destination_title=${object/getTitle}
+
+]]></string> </value>
         </item>
       </dictionary>
     </pickle>
