@@ -26,13 +26,11 @@
         </item>
         <item>
             <key> <string>category</string> </key>
-            <value> <string>object_jump</string> </value>
+            <value> <string>global</string> </value>
         </item>
         <item>
             <key> <string>condition</string> </key>
-            <value>
-              <persistent> <string encoding="base64">AAAAAAAAAAM=</string> </persistent>
-            </value>
+            <value> <string></string> </value>
         </item>
         <item>
             <key> <string>description</string> </key>
@@ -44,7 +42,7 @@
         </item>
         <item>
             <key> <string>id</string> </key>
-            <value> <string>jump_active_accounting_pref</string> </value>
+            <value> <string>bt_tool</string> </value>
         </item>
         <item>
             <key> <string>optional</string> </key>
@@ -54,17 +52,17 @@
             <key> <string>permissions</string> </key>
             <value>
               <tuple>
-                <string>View</string>
+                <string>Manage portal</string>
               </tuple>
             </value>
         </item>
         <item>
             <key> <string>priority</string> </key>
-            <value> <float>12.0</float> </value>
+            <value> <float>1.0</float> </value>
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Active Preference</string> </value>
+            <value> <string>Manage Business Templates</string> </value>
         </item>
         <item>
             <key> <string>visible</string> </key>
@@ -87,26 +85,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${object_url}/AccountingTransactionModule_jumpToActiveAccountingPreference</string> </value>
-        </item>
-      </dictionary>
-    </pickle>
-  </record>
-  <record id="3" aka="AAAAAAAAAAM=">
-    <pickle>
-      <tuple>
-        <tuple>
-          <string>Products.CMFCore.Expression</string>
-          <string>Expression</string>
-        </tuple>
-        <none/>
-      </tuple>
-    </pickle>
-    <pickle>
-      <dictionary>
-        <item>
-            <key> <string>text</string> </key>
-            <value> <string>python:object.REQUEST.get(\'form_id\') == \'Entity_viewAccountingTransactionList\'</string> </value>
+            <value> <string>string: ${portal_url}/portal_templates/view</string> </value>
         </item>
       </dictionary>
     </pickle>
