@@ -1,3 +1,6 @@
+2006-01-26 Aurel
+* add some actions
+
 2006-01-23 Alex
 * simplified Bank Accounts
 * added support for Portal Type Role Definitions
